--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
     "celebrate": "^13.0.4",
     "core-js": "^3.8.1",
     "dotenv": "^8.2.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.8.0",
     "express-winston": "^4.0.5",
     "install": "^0.13.0",
     "joi": "^17.3.0",
