--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-polyfill": "^6.26.0",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "celebrate": "^13.0.4",
     "core-js": "^3.8.1",
     "dotenv": "^8.2.0",
@@ -44,6 +45,7 @@
     "install": "^0.13.0",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.3",
     "mongoose": "^5.11.7",
     "normalize-port": "^1.0.0",
     "validator": "^13.5.2",
